[package]
name = "egui-macroquad"
version = "0.16.0"
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
homepage = "https://github.com/optozorax/egui-macroquad"
repository = "https://github.com/optozorax/egui-macroquad"
description = "Bindings between egui and macroquad"
readme = "README.md"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]

[features]
default = ["audio"]
audio = []

[profile.release]
opt-level = 2

[dependencies]
egui = "0.31.0"
egui-miniquad = { git = "https://github.com/Gyorgy0/egui-miniquad.git", version = "0.16.0" }
macroquad = "0.4.13"
miniquad = "0.4.6"
